[package]
name = "p2p-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
fuser = "0.16.0"
keyring = { version = "3.6.3", features = ["linux-native"] }
libc = "0.2.178"
libp2p = { version = "0.56.0", features = ["cbor", "identify", "macros", "request-response"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
